--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   intl: ^0.16.1
+  modal_bottom_sheet: ^1.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
